# Used-Car-Value-Tier-Prediction

./: .gitignore  Makefile  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
autoscout/autoscout/: middlewares.py  settings.py
config/: config.toml
configs/: config.toml
deploy/: README.md  car-dashboard.service  setup.sh  start.sh
docs/: project_requirements_checklist.md
docs/Data_Science_Final_Report/: main.aux  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc  team9_contribution.tex
models/m-22fec9cc2dba4df5925be40713aea9d0/artifacts/: MLmodel
models/m-29a85b0688a84925b29da84cb8c7442b/artifacts/: MLmodel  python_env.yaml
notebooks/: best_model_classification_report.txt  clean_data.ipynb  data_cleaning.ipynb  data_merging.ipynb  data_validation.ipynb  data_validation_crawled.ipynb  data_validation_kaggle.ipynb  data_validation_merged.ipynb  eda.ipynb  modeling.ipynb  modeling_mlflow.ipynb
notebooks/playgrounds/: data_validation_crawled.ipynb
reports/: best_model_classification_report.txt  feature_importance.csv  feature_importance_report.txt  model_comparison.csv  model_comparison1.csv  modeling_rationale.md  results_eval.md  selected_features.txt
reports/results/: preprocessed_validation_report.json  preprocessed_validation_report.txt  raw_validation_report.json  raw_validation_report.txt  validation_report.json  validation_report.txt
scripts/: download_kaggle.py  model_development_mlflow.py
scripts/autoscout/: cars_dataset.csv
scripts/autoscout/autoscout/: items.py  pipelines.py
scripts/autoscout/autoscout/spiders/: cars_spider.py
scripts/data/: clean_data.py  download_kaggle.py  merge_data.py  scrape_data.sh  validate_data.py
scripts/data/autoscout/autoscout/: items.py  middlewares.py  pipelines.py  settings.py
scripts/data/autoscout/autoscout/spiders/: cars_spider.py
scripts/features/: select_features.py
scripts/models/: select_model.py  train_model.py
src/data/: clean_data.py  data_validation.py  merge_data.py  temp.py  validate_data.py
src/data/mappings/: brand_aliases.json  fuel_aliases.json  gear_aliases.json  missing_placeholders.json  model_aliases.json  seller_aliases.json  vt_aliases.json
src/data/schemas/: schema.json
src/features/: encoding.py  engineering.py  feature_selection.py
src/models/: predict.py  select_model.py  train.py  train_model.py
src/modules/: data_validator.py
src/visualizations/: visualize.py
tests/: conftest.py  test_integration.py
tests/test_data/: test_clean_data.py  test_merge_data.py  test_validate_data.py
tests/test_features/: test_feature_selection.py
tests/test_models/: test_select_model.py  test_train_model.py
