[project]
name = "used-car-value-tier-prediction"
version = "0.1.0"
description = ""
authors = [
    {name = "ahmed_hamdiy",email = "ahmed.hamdiy03@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pandas<3",
    "pygments>=2.20.0,<3.0.0",
    "matplotlib>=3.10.8,<4.0.0",
    "seaborn>=0.13.2,<0.14.0",
    "numpy>=2.4.4,<3.0.0",
    "jupyter>=1.1.1,<2.0.0",
    "requests>=2.33.1,<3.0.0",
    "beautifulsoup4>=4.14.3,<5.0.0",
    "kagglehub>=1.0.0,<2.0.0",
    "flake8>=7.3.0,<8.0.0",

    "mlflow>=3.11",
    "scikit-learn",
    "protobuf (>=3.20.0,<4.0.0)",
    "imbalanced-learn (>=0.14.1,<0.15.0)",
    "xgboost (>=3.2.0,<4.0.0)",

    "scipy (>=1.17.1,<2.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "scrapy-splash (>=0.11.1,<0.12.0)",
    "scrapy (>=2.15.2,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)"
]
[tool.pytest.ini_options]
pythonpath = [
  "."
]

