[project]
name = "used-car-value-tier-prediction"
version = "0.1.0"
description = "Machine learning pipeline for car value classification"
authors = [
    {name = "Ahmed Aladdin", email = "ahmed.hamdiy03@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = ">=2.2.0,<3.0.0"
numpy = ">=1.26.0,<3.0.0"
matplotlib = ">=3.8.0,<4.0.0"
seaborn = ">=0.13.0,<0.14.0"
scikit-learn = ">=1.4.0,<2.0.0"
xgboost = ">=2.0.0,<3.0.0"
scipy = ">=1.11.0,<2.0.0"
imbalanced-learn = ">=0.12.0,<0.13.0"
mlflow = ">=2.10.0"
streamlit = ">=1.30.0,<2.0.0"
plotly = ">=5.18.0,<7.0.0"
requests = ">=2.31.0,<3.0.0"
beautifulsoup4 = ">=4.12.0,<5.0.0"
kagglehub = ">=0.2.0,<1.0.0"
scrapy = ">=2.11.0,<3.0.0"
scrapy-splash = ">=0.9.0"
jupyter = ">=1.0.0"
pygments = ">=2.17.0"
protobuf = ">=3.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-cov = "^6.0.0"
flake8 = "^7.0.0"
black = "^24.0.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]